load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("//bazel/astore:defs.bzl", "astore_upload")

go_library(
    name = "faketree_lib",
    srcs = ["faketree.go"],
    importpath = "github.com/enfabrica/enkit/faketree",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/multierror",
        "@com_github_docker_docker//pkg/reexec",
        "@com_github_spf13_pflag//:pflag",
    ],
)

go_binary(
    name = "faketree",
    embed = [":faketree_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "faketree_test",
    srcs = ["faketree_test.go"],
    embed = [":faketree_lib"],
    tags = [
        # This test depends on the UID/GID of the current user, which may not
        # match that of remote executors.
        "no-remote-exec",
    ],
    deps = ["@com_github_stretchr_testify//assert"],
)

sh_test(
    name = "faketree_sh_test",
    srcs = ["faketree_test.sh"],
    data = [":faketree"],
    tags = [
        # Cloud Build cannot run privileged containers
        "no-cloudbuild",
    ],
)

astore_upload(
    name = "astore_push",
    file = "infra/tools/faketree",
    targets = [
        ":faketree",
    ],
    visibility = ["//:__pkg__"],
)
