load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/enfabrica/gee",
    visibility = ["//visibility:private"],
    deps = [
        "//gee/cmd:go_default_library",
    ],
)

go_binary(
    name = "gee",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "gee-linux-amd64",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    static = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "gee-darwin-amd64",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "darwin",
    static = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "gee-win-amd64",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "windows",
    static = "on",
    visibility = ["//visibility:public"],
)

load("//bazel/astore:defs.bzl", "astore_upload")

astore_upload(
    name = "deploy",
    file = "tools/gee-golang-beta",
    targets = [
        ":gee-linux-amd64",
        ":gee-darwin-amd64",
        ":gee-win-amd64",
    ],
)
