load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/enfabrica/enkit/ghinviter",
    visibility = ["//visibility:private"],
    deps = [
        "//ghinviter/credentials:go_default_library",
        "//ghinviter/inviter:go_default_library",
        "//lib/kflags:go_default_library",
        "//lib/kflags/kcobra:go_default_library",
        "//lib/logger:go_default_library",
        "//lib/srand:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_binary(
    name = "ghinviter",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
