load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "kbuild_lib",
    srcs = ["main.go"],
    importpath = "github.com/enfabrica/enkit/kbuild",
    visibility = ["//visibility:private"],
    deps = [
        "//kbuild/assets",
        "//kbuild/common",
        "//kbuild/kapt",
        "//lib/config/marshal",
        "//lib/karchive",
        "//lib/khttp/protocol",
        "//lib/khttp/scheduler",
        "//lib/khttp/workpool",
        "//lib/retry",
        "@com_github_xor_gate_ar//:ar",
    ],
)

go_binary(
    name = "kbuild",
    embed = [":kbuild_lib"],
    visibility = ["//visibility:public"],
)
