load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "command.go",
        "flags.go",
    ],
    importpath = "github.com/enfabrica/enkit/machinist",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/client:go_default_library",
        "//machinist/config:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
