load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["machinist_e2e_test.go"],
    race = "on",
    deps = [
        ":go_default_library",
        "//machinist/mnode:go_default_library",
        "//machinist/mserver:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//test/bufconn:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["flags.go"],
    importpath = "github.com/enfabrica/enkit/machinist",
    visibility = ["//visibility:public"],
)
