load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "machinist",
    srcs = ["command.go"],
    importpath = "github.com/enfabrica/enkit/machinist",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/client",
        "//machinist/config",
        "//machinist/machine",
        "//machinist/mserver",
        "@com_github_spf13_cobra//:cobra",
    ],
)

alias(
    name = "go_default_library",
    actual = ":machinist",
    visibility = ["//visibility:public"],
)
