load("@io_bazel_rules_docker//docker/util:run.bzl", "container_run_and_commit")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

container_run_and_commit(
    name = "server-image",
    image = "@ubuntu-20.04//image",
    commands = ["apt-get update"],
)

container_image(
    name = "license-manager-server",
    base = ":server-image",
    labels = {
        "maintainer": "bbhuynh@enfabrica.net",
    },
	files = ["//manager/server:server"],
	entrypoint = ["/server"],
	cmd = [], # override the default /bin/bash
)

container_push(
	name = "upload-server",
	format = "Docker",
	image = ":license-manager-server",
	registry = "gcr.io",
	repository = "devops-284019/infra/flexlm",
	tag = "license-manager-server",
	visibility = ["//visibility:public"],
)
