load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "monitor_lib",
    srcs = ["main.go"],
    importpath = "github.com/enfabrica/enkit/monitor",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/client",
        "//lib/config/marshal",
        "//lib/kflags/kcobra",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "monitor",
    data = [":probes.toml"],
    embed = [":monitor_lib"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_image(
    name = "monitor-image",
    args = ["$(location :probes.toml)"],
    base = "@golang_base//image",
    binary = ":monitor",
    data = [
        ":probes.toml",
    ],
    visibility = ["//visibility:public"],
)

container_push(
    name = "upload-monitor-image",
    format = "Docker",
    image = ":monitor-image",
    registry = "gcr.io",
    repository = "devops-284019/infra/monitor",
    tag = "monitor-server",
    visibility = ["//visibility:public"],
)
