load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "monitor_lib",
    srcs = ["main.go"],
    importpath = "github.com/enfabrica/enkit/monitor",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/client",
        "//lib/config/marshal",
        "//lib/kflags/kcobra",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "monitor",
    data = [":probes.toml"],
    embed = [":monitor_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tar",
    srcs = [
        ":monitor",
        "probes.toml",
    ],
    package_dir = "/enfabrica/bin",
)

oci_image(
    name = "image",
    base = "@container_golang_base",
    cmd = ["/enfabrica/bin/probes.toml"],
    entrypoint = ["/enfabrica/bin/monitor"],
    tars = [":tar"],
)

oci_push(
    name = "image_push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "gcr.io/devops-284019/infra/monitor",
)
