load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/enfabrica/enkit/proxy",
    visibility = ["//visibility:private"],
    deps = [
        ":credentials",
        "//lib/client:go_default_library",
        "//lib/config/marshal:go_default_library",
        "//lib/kflags:go_default_library",
        "//lib/kflags/kcobra:go_default_library",
        "//lib/khttp:go_default_library",
        "//lib/oauth:go_default_library",
        "//lib/srand:go_default_library",
        "//proxy/httpp:go_default_library",
        "//proxy/nasshp:go_default_library",
        "//proxy/utils:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_binary(
    name = "enproxy",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_go//extras:embed_data.bzl", "go_embed_data")

# Generate a .go file containing all the credentials supplied during the build.
go_embed_data(
    name = "embedded-credentials",
    package = "credentials",
    srcs = glob(["credentials/**/*.flag*"]),
    visibility = ["//visibility:public"],
    flatten = True,
)

go_library(
    name = "credentials",
    srcs = [":embedded-credentials"],
    importpath = "github.com/enfabrica/enkit/proxy/credentials",
    visibility = ["//visibility:public"],
)
