load("@//bazel/astore:defs.bzl", "astore_upload")
load("@//bazel:shellutils.bzl", "bats_test", "shellcheck_test")

sh_library(
    name = "gee-lib",
    srcs = [ "gee" ],
)

bats_test(
    name = "gee-bats",
    srcs = ["gee.bats"],
    deps = [":gee-lib"],
)

shellcheck_test(
    name = "gee-shellcheck_test",
    srcs = ["gee"],
)

filegroup(
    name = "gee-script",
    srcs = ["gee"],
)

astore_upload(
    name = "test_deploy",
    dir = "test",
    targets = [
        ":gee-script",
    ],
    visibility = [
        "//developer:__subpackages__",
    ],
)
