load("@//bazel/astore:defs.bzl", "astore_upload")
load("@//bazel:shellutils.bzl", "bats_test", "shellcheck_test")
load("@//bazel/utils:diff_test.bzl", "diff_test")

sh_library(
    name = "gee-lib",
    srcs = ["gee"],
)

bats_test(
    name = "gee-bats",
    srcs = ["gee.bats"],
    deps = [":gee-lib"],
)

shellcheck_test(
    name = "gee-shellcheck_test",
    srcs = ["gee"],
)

filegroup(
    name = "gee-script",
    srcs = ["gee"],
)

astore_upload(
    name = "test_deploy",
    dir = "test",
    targets = [
        ":gee-script",
    ],
    visibility = [
        "//developer:__subpackages__",
    ],
)

genrule(
    name = "gee.md-gen",
    outs = ["actual-gee.md"],
    srcs = ["gee"],
    cmd_bash = "TERM=none /bin/bash $(location gee) help markdown >$@"
)

diff_test(
    name = "gee.md-diff_test",
    actual = "actual-gee.md",
    expected = "gee.md",
)
