load("@//bazel:shellutils.bzl", "shellcheck_test")
load("@//bazel/astore:defs.bzl", "astore_upload")
load("@//bazel/utils:diff_test.bzl", "diff_test")
load("@bazel_bats//:rules.bzl", "bats_test")

sh_library(
    name = "gee-lib",
    srcs = ["gee"],
)

bats_test(
    name = "gee-bats",
    srcs = ["gee.bats"],
    uses_bats_assert = True,
    deps = [":gee-lib"],
)

shellcheck_test(
    name = "gee-shellcheck_test",
    srcs = ["gee"],
)

filegroup(
    name = "gee-script",
    srcs = ["gee"],
)

astore_upload(
    name = "test_deploy",
    dir = "test",
    targets = [
        ":gee-script",
    ],
    visibility = [
        "//developer:__subpackages__",
    ],
)

genrule(
    name = "gee.md-gen",
    srcs = ["gee"],
    outs = ["actual-gee.md"],
    cmd_bash = "TERM=none /bin/bash $(location gee) help markdown >$@",
)

diff_test(
    name = "gee.md-diff_test",
    actual = "actual-gee.md",
    expected = "gee.md",
)
