load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/enfabrica/enkit/staco",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/github:go_default_library",
        "//lib/kflags:go_default_library",
        "//lib/kflags/kcobra:go_default_library",
        "@com_github_josephburnett_jd//lib:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_binary(
    name = "staco",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
