load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//bazel/astore:defs.bzl", "astore_upload")

go_library(
    name = "staco_lib",
    srcs = ["main.go"],
    importpath = "github.com/enfabrica/enkit/staco",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/github",
        "//lib/kflags",
        "//lib/kflags/kcobra",
        "@com_github_josephburnett_jd//lib",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "staco",
    embed = [":staco_lib"],
    visibility = ["//visibility:public"],
)

astore_upload(
    name = "deploy",
    file = "tools/staco",
    targets = [
        ":staco",
    ],
    visibility = ["//:__pkg__"],
)
