load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/enfabrica/enkit/testbin",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/kbuildbarn/exec:go_default_library",
        "//lib/logger:go_default_library",
    ],
)

go_binary(
    name = "testbin",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
