load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "allocation_manager_proto",
    srcs = ["allocation_manager.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

proto_library(
    name = "config_proto",
    srcs = ["config.proto"],
    deps = [
        ":allocation_manager_proto",
    ],
)

go_proto_library(
    name = "allocation_manager_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/enfabrica/enkit/allocation_manager/proto",
    proto = ":proto_proto",
    visibility = ["//visibility:public"],
)

py_proto_library(
    name = "allocation_manager_py_proto",
    srcs = ["allocation_manager.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:protobuf_python"],
)

# 2024-09 kjw broken! """ #error "C++ versions less than C++14 are not supported." """
#load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_grpc_library")
#py_grpc_library(
#    name = "allocation_manager_py_grpc",
#    srcs = [
#        ":allocation_manager_proto",
#    ],
#    deps = [":allocation_manager_py_proto"],
#)

proto_library(
    name = "proto_proto",
    srcs = [
        "allocation_manager.proto",
        "config.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_library(
    name = "proto",
    embed = [":allocation_manager_go_proto"],
    importpath = "github.com/enfabrica/enkit/allocation_manager/proto",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":proto",
    visibility = ["//visibility:public"],
)
