load("//bazel/astore:defs.bzl", "astore_upload")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    embedsrcs = glob(["templates/*.tmpl"]),  # keep
    importpath = "github.com/enfabrica/enkit/allocation_manager/server",
    visibility = ["//visibility:private"],
    deps = [
        "//allocation_manager/proto",
        "//allocation_manager/service",
        "//lib/server",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//encoding/prototext",
    ],
)

go_binary(
    name = "allocation_manager",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

astore_upload(
    name = "astore_push",
    file = "infra/allocation_manager/server",
    targets = [
        ":allocation_manager",
    ],
    visibility = ["//:__pkg__"],
)
