load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//bazel/astore:defs.bzl", "astore_upload")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    embedsrcs = glob(["templates/*.tmpl"]),  # keep
    importpath = "github.com/enfabrica/enkit/allocation_manager/server",
    visibility = ["//visibility:private"],
    deps = [
        "//allocation_manager/proto:allocation_manager_go_proto",
        "//allocation_manager/service",
        "//lib/server",
        "//lib/logger",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_protobuf//encoding/prototext",
    ],
)

astore_upload(
    name = "astore_push",
    file = "infra/allocation_manager/server",
    targets = [
        ":allocation_manager_server",
    ],
    visibility = ["//:__pkg__"],
)

alias(
    name = "go_default_library",
    actual = ":server_lib",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "allocation_manager_server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
