load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "service",
    srcs = [
        "prioritizer.go",
        "queue.go",
        "service.go",
        "unit.go",
        "query.go",
    ],
    importpath = "github.com/enfabrica/enkit/allocation_manager/service",
    visibility = ["//visibility:public"],
    deps = [
        "//allocation_manager/proto",
        "//lib/logger",
        "@com_github_google_uuid//:uuid",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

alias(
    name = "go_default_library",
    actual = ":service",
    visibility = ["//visibility:public"],
)

go_test(
    name = "service_test",
    srcs = [
        "queue_test.go",
        "service_test.go",
        "unit_test.go",
        "query_test.go",
    ],
    embed = [":service"],
    deps = [
        "//allocation_manager/proto",
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
