load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "topology",
    srcs = ["config.go"],
    importpath = "github.com/enfabrica/enkit/allocation_manager/topology",
    visibility = ["//allocation_manager:__subpackages__"],
    deps = ["@in_gopkg_yaml_v3//:yaml_v3"],
)

go_test(
    name = "topology_test",
    srcs = ["config_test.go"],
    embed = [":topology"],
    deps = [
        "@com_github_stretchr_testify//assert",
    ],
)

alias(
    name = "go_default_library",
    actual = ":topology",
    visibility = ["//visibility:public"],
)
