load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = [
        "e2e_test.go",
        "server_test.go",
    ],
    deps = [
        "//astore/client/astore:go_default_library",
        "//astore/rpc:astore-go",
        "//astore/server/astore:go_default_library",
        "//lib/client/ccontext:go_default_library",
        "//lib/khttp/ktest:go_default_library",
        "//lib/logger:go_default_library",
        "//lib/progress:go_default_library",
        "//lib/srand:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//test/bufconn:go_default_library",
    ],
)
